# c-compiler

./: .cursorrules  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  TODO.md
backend/besm6/: CMakeLists.txt  TODO.md  abi.h  arith_tests.cpp  besm.h  besm6.asdl  besm_alloc.c  besm_const.c  besm_free.c  besm_madlen.c  besm_mnem.c  book_run.h  chapter10_tests.cpp  chapter11_tests.cpp  chapter12_tests.cpp  chapter13_tests.cpp  chapter14_tests.cpp  chapter15_tests.cpp  chapter16_tests.cpp  chapter17_tests.cpp  chapter18_tests.cpp  chapter18_tests1.cpp  chapter18_tests2.cpp  chapter18_tests3.cpp  chapter18_tests4.cpp  chapter19_tests.cpp  chapter1_tests.cpp  chapter20_tests.cpp  chapter2_tests.cpp  chapter3_tests.cpp  chapter4_tests.cpp  chapter5_tests.cpp  chapter6_tests.cpp  chapter7_tests.cpp  chapter8_tests.cpp  chapter9_tests.cpp  char_tests.cpp  codegen.c  codegen.h  codegen_test.h  (+30 more)
backend/besm6/include/: README.md  assert.h  errno.h  fenv.h  float.h  inttypes.h  locale.h  malloc.h  math.h  setjmp.h  stdio.h  (+8 more)
libc/besm6/: CMakeLists.txt  atoi.c  doprnt.c  malloc.c  memchr.c  memcpy.c  putch.c  snprintf.c  strchr.c  strlen.c
libutil/: CMakeLists.txt  c_escape.c  c_escape.h  string_map.c  string_map.h  string_map_tests.cpp  unique.c  unique.h  wio.c  wio.h  wio_tests.cpp  xalloc.c  xalloc.h  xalloc_tests.cpp
libutil/test/: c_escape_tests.cpp  test_chdir.cpp  test_preprocess.h  wio_tests.cpp  xalloc_tests.cpp
optimize/: CMakeLists.txt  TODO.md  alias.c  alias.h  cfg.c  cfg.h  chapter19_tests.cpp  chapter19_tests1.cpp  chapter19_tests2.cpp  chapter19_tests3.cpp  chapter19_tests4.cpp  const_fold.c  const_fold_tests.cpp  copy_prop.c  copy_prop_tests.cpp  dead_store.c  dead_store_tests.cpp  jump_unreachable_tests.cpp  optimize.c  optimize.h  optimizer_test_fixture.h  optimizer_tests.cpp  pipeline_test_fixture.h  pipeline_tests.cpp  type_conv_tests.cpp  unreachable.c
optimize/test/: chapter19_tests1.cpp  chapter19_tests2.cpp  chapter19_tests3.cpp  chapter19_tests4.cpp  dead_store_tests.cpp  jump_unreachable_tests.cpp  pipeline_test_fixture.h  pipeline_tests.cpp
parser/: CMakeLists.txt  ast.asdl  ast.h  ast_alloc.c  ast_clone.c  ast_compare.c  ast_export.c  ast_free.c  ast_graphviz.c  ast_import.c  ast_print.c  ast_yaml.c  chapter10_tests.cpp  chapter11_tests.cpp  chapter13_tests.cpp  chapter14_tests.cpp  chapter15_tests.cpp  chapter17_tests.cpp  chapter18_tests.cpp  chapter1_tests.cpp  chapter4_tests.cpp  constant_tests.cpp  decl.c  declaration_tests.cpp  decls_types_tests.cpp  expr.c  fixture.h  internal.h  main.c  nametab.c  negative_tests.cpp  operator_tests.cpp  ops_tests.cpp  parser.c  parser.h  parser_internal.h  serialize_test.cpp  serialize_tests.cpp  simple_tests.cpp  statement_tests.cpp  (+12 more)
parser/test/: chapter12_tests.cpp  chapter16_tests.cpp  chapter18_tests.cpp  chapter1_tests.cpp  chapter2_tests.cpp  chapter3_tests.cpp  chapter5_tests.cpp  chapter6_tests.cpp  chapter7_tests.cpp  chapter8_tests.cpp  chapter9_tests.cpp  constant_tests.cpp  declaration_tests.cpp  negative_tests.cpp  operator_tests.cpp  simple_tests.cpp
scanner/: CMakeLists.txt  chapter11_tests.cpp  chapter16_tests.cpp  scan_fixture.h  scanner.c  scanner.h  tests.cpp
scanner/test/: chapter12_tests.cpp  chapter13_tests.cpp  chapter1_tests.cpp  chapter6_tests.cpp  tests.cpp
semantic/: CMakeLists.txt  chapter10_tests.cpp  chapter15_tests.cpp  chapter16_tests.cpp  chapter18_tests.cpp  chapter3_tests.cpp  chapter5_tests.cpp  chapter6_tests.cpp  chapter9_tests.cpp  coercion_tests.cpp  const_convert.c  const_convert_tests.cpp  declarations.c  expressions.c  initializers.c  label_loops.c  label_loops_tests.cpp  pipeline_tests.cpp  resolve_labels.c  semantic.h  statements.c  structtab.c  structtab.h  structtab_print.c  structtab_tests.cpp  symtab.c  symtab.h  symtab_print.c  symtab_tests.cpp  target.c  target.h  type_utils.c  typecheck.c  typecheck.h  typecheck_fixture.h  typecheck_real_tests.cpp  typecheck_tests.cpp  typetab.c  typetab.h  typetab_print.c  (+1 more)
semantic/attic/: hash_table.c  resolve.c  resolve.h  resolve_function_declaration_tests.cpp  resolve_global_declaration_tests.cpp  resolve_initializer_tests.cpp  resolve_structure_declaration_tests.cpp  resolve_type_tests.cpp
semantic/test/: chapter10_tests.cpp  chapter11_tests.cpp  chapter12_tests.cpp  chapter13_tests.cpp  chapter14_tests.cpp  chapter15_tests.cpp  chapter17_tests.cpp  chapter18_tests.cpp  chapter7_tests.cpp  chapter8_tests.cpp  coercion_tests.cpp  const_convert_tests.cpp  intrinsics_tests.cpp  label_loops_tests.cpp  pipeline_tests.cpp  structtab_tests.cpp  symtab_tests.cpp  typecheck_tests.cpp
tac/: CMakeLists.txt  binary_tests.cpp  graphviz_tests.cpp  tac-structure.dot  tac-structures.dot  tac.asdl  tac.h  tac_alloc.c  tac_binary_tests.cpp  tac_compare.c  tac_export.c  tac_export.h  tac_free.c  tac_function.c  tac_graphviz.c  tac_graphviz_tests.cpp  tac_import.c  tac_print.c  tac_yaml.c  tac_yaml.h  tac_yaml_tests.cpp  tacky.asdl  tags.h  yaml_tests.cpp
tac/test/: binary_tests.cpp  graphviz_tests.cpp  yaml_tests.cpp
translator/: CMakeLists.txt  cast_tests.cpp  const_convert.c  const_convert_tests.cpp  decl_tests.cpp  expr.c  expr_tests.cpp  hash_table.h  incdec_tests.cpp  main.c  ptr_tests.cpp  resolve.c  resolve_statement_tests.cpp  stmt.c  stmt_tests.cpp  struct_tests.cpp  structtab.c  structtab_tests.cpp  switch_tests.cpp  symtab.c  symtab.h  symtab_print.c  symtab_tests.cpp  tac_grammar_tests.cpp  translate.c  translate.h  translate_gen.c  translate_gen.h  translate_incdec_tests.cpp  translate_stmt_tests.cpp  translate_switch_tests.cpp  translate_test.h  translate_tests.cpp  translator.c  translator.h  type.c  type.h  type_utils.c  typecheck.c  typecheck_tests.cpp  (+4 more)
translator/attic/: resolve.c  resolve_expr_tests.cpp  tac_declaration.c  tac_function.c  tac_grammar_tests.cpp  tac_type_tests.cpp
translator/test/: cast_tests.cpp  decl_tests.cpp  expr_tests.cpp  incdec_tests.cpp  ptr_tests.cpp  stmt_tests.cpp  struct_tests.cpp  switch_tests.cpp  translate_test.h
wio/: CMakeLists.txt  wio.c  wio.h  wio_tests.cpp
(+312 files in other folders)
